--- a/tools/repo-ninja/pom.xml
+++ b/tools/repo-ninja/pom.xml
@@ -20,12 +20,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>midPoint Infrastructure - repo ninja</name>
-    <groupId>com.evolveum.midpoint.tools</groupId>
+    <groupId>com.evolveum.midpoint.repo</groupId>
     <artifactId>repo-ninja</artifactId>
     <parent>
         <artifactId>tools</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
         <version>2.2-SNAPSHOT</version>
+        <relativePath>../../build-system/pom.xml</relativePath>
     </parent>
     <dependencies>
         <dependency>
