--- a/tools/repo-ninja/pom.xml
+++ b/tools/repo-ninja/pom.xml
@@ -20,7 +20,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <name>midPoint Infrastructure - repo ninja</name>
-    <groupId>com.evolveum.midpoint.repo</groupId>
+    <groupId>com.evolveum.midpoint.tools</groupId>
     <artifactId>repo-ninja</artifactId>
     <parent>
         <artifactId>tools</artifactId>
@@ -111,6 +111,24 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+		        <artifactId>maven-assembly-plugin</artifactId>
+		        <version>2.4</version>
+		        <configuration>
+		          <descriptors>
+		            <descriptor>src/main/assembly/bin.xml</descriptor>
+		          </descriptors>
+		        </configuration>
+		        <executions>
+		          <execution>
+		            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+		            <phase>package</phase> <!-- bind to the packaging phase -->
+		            <goals>
+		              <goal>single</goal>
+		            </goals>
+		          </execution>
+		        </executions>
+	        </plugin>
         </plugins>
     </build>
 </project>
