--- a/pom.xml
+++ b/pom.xml
@@ -16,108 +16,164 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <name>midPoint Project</name>
-    <groupId>com.evolveum.midpoint</groupId>
-    <artifactId>midpoint</artifactId>
-    <version>2.2-SNAPSHOT</version>
-    <packaging>pom</packaging>
-    <description>Utility module to compile all of the maven based midPoint projects.</description>
-    <organization>
-        <name>evolveum</name>
-        <url>http://www.evolveum.com</url>
-    </organization>
-    <licenses>
-        <license>
-            <name>Apache License v2.0</name>
-            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-            <distribution>repo</distribution>
-        </license>
-    </licenses>
-    <issueManagement>
-        <system>Atlassian JIRA</system>
-        <url>https://jira.evolveum.com/browse/MID</url>
-    </issueManagement>
-    <scm>
-        <connection>scm:git:git://git.evolveum.com/midpoint.gittrunk/</connection>
-        <developerConnection>scm:git:git://git.evolveum.com/midpoint.gittrunk/</developerConnection>
-        <url>http://fisheye.evolveum.com/browse/MidPoint/trunk</url>
-    </scm>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <repositories>
-        <repository>
-            <id>evolveum</id>
-            <name>Evolveum</name>
-            <url>http://nexus.evolveum.com/nexus/content/groups/public</url>
-        </repository>
-    </repositories>
-    <properties>
-        <!-- Build system options - more options in build-system/pom.xml -->
-        <project.source.version>1.6</project.source.version>
-        <clover.version>3.1.11</clover.version>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-    <modules>
-        <module>build-system</module>
-        <module>tools</module>
-        <module>infra</module>
-        <module>repo</module>
-        <module>provisioning</module>
-        <module>model</module>
-        <module>gui</module>
-        <module>icf-connectors</module>
-        <module>samples</module>
-        <module>dist</module>
-    </modules>
-    <profiles>
-        <profile>
-            <id>clover</id>
-            <activation>
-                <activeByDefault>false</activeByDefault>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>com.atlassian.maven.plugins</groupId>
-                        <artifactId>maven-clover2-plugin</artifactId>
-                        <version>3.1.1</version>
-                        <configuration>
-                            <targetPercentage>0%</targetPercentage>
-                            <includesTestSourceRoots>true</includesTestSourceRoots>
-                            <jdk>${project.source.version}</jdk>
-                            <generateXml>true</generateXml>
-                            <generateHistorical>true</generateHistorical>
-                            <multiproject>true</multiproject>
-                            <excludes>
-                                <exclude>**/MidpointAspect.java</exclude>
-                            </excludes>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<name>midPoint Project</name>
+	<groupId>com.evolveum.midpoint</groupId>
+	<artifactId>midpoint</artifactId>
+	<version>2.2-SNAPSHOT</version>
+	<packaging>pom</packaging>
+	<description>Utility module to compile all of the maven based midPoint projects.</description>
+	<organization>
+		<name>evolveum</name>
+		<url>http://www.evolveum.com</url>
+	</organization>
+	<licenses>
+		<license>
+			<name>Apache License v2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+	<issueManagement>
+		<system>Atlassian JIRA</system>
+		<url>https://jira.evolveum.com/browse/MID</url>
+	</issueManagement>
+	<scm>
+		<connection>scm:git:git://git.evolveum.com/midpoint.gittrunk/</connection>
+		<developerConnection>scm:git:git://git.evolveum.com/midpoint.gittrunk/</developerConnection>
+		<url>http://fisheye.evolveum.com/browse/MidPoint/trunk</url>
+	</scm>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+		</plugins>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.maven.plugins</groupId>
+										<artifactId>maven-dependency-plugin</artifactId>
+										<versionRange>[2.0,)</versionRange>
+										<goals>
+											<goal>copy-dependencies</goal>
+											<goal>unpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.codehaus.mojo</groupId>
+										<artifactId>aspectj-maven-plugin</artifactId>
+										<versionRange>[1.0,)</versionRange>
+										<goals>
+											<goal>test-compile</goal>
+											<goal>compile</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.apache.cxf</groupId>
+										<artifactId>cxf-codegen-plugin</artifactId>
+										<versionRange>[2.4.3,)</versionRange>
+										<goals>
+											<goal>wsdl2java</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+	</build>
+	<repositories>
+		<repository>
+			<id>evolveum</id>
+			<name>Evolveum</name>
+			<url>http://nexus.evolveum.com/nexus/content/groups/public</url>
+		</repository>
+	</repositories>
+	<properties>
+		<!-- Build system options - more options in build-system/pom.xml -->
+		<project.source.version>1.6</project.source.version>
+		<clover.version>3.1.11</clover.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+	<modules>
+		<module>build-system</module>
+		<module>tools</module>
+		<module>infra</module>
+		<module>repo</module>
+		<module>provisioning</module>
+		<module>model</module>
+		<module>gui</module>
+		<module>icf-connectors</module>
+		<module>samples</module>
+		<module>dist</module>
+	</modules>
+	<profiles>
+		<profile>
+			<id>clover</id>
+			<activation>
+				<activeByDefault>false</activeByDefault>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>com.atlassian.maven.plugins</groupId>
+						<artifactId>maven-clover2-plugin</artifactId>
+						<version>3.1.1</version>
+						<configuration>
+							<targetPercentage>0%</targetPercentage>
+							<includesTestSourceRoots>true</includesTestSourceRoots>
+							<jdk>${project.source.version}</jdk>
+							<generateXml>true</generateXml>
+							<generateHistorical>true</generateHistorical>
+							<multiproject>true</multiproject>
+							<excludes>
+								<exclude>**/MidpointAspect.java</exclude>
+							</excludes>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
 
-        </profile>
-        <profile>
-            <id>sanity</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>testing</module>
-            </modules>
-        </profile>
-    </profiles>
+		</profile>
+		<profile>
+			<id>sanity</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<modules>
+				<module>testing</module>
+			</modules>
+		</profile>
+	</profiles>
 </project>
