changed revisionNumber to git describe, in build as well in gui.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/PageBase_en_US.utf8.properties
@@ -6,6 +6,6 @@ PageBase.button.save=Save
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
-pageBase.midPointVersion=Version\: ${pom.version}, revision\: ${buildNumber}
+pageBase.midPointVersion=Version\: ${pom.version}, describe\: ${describe}
 pageBase.rightsReserved=&copy;2013 Evolveum. All Rights Reserved.
 pageBase.unknownBuildNumber=unknown
