--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/PageBase_sk_SK.utf8.properties
@@ -6,6 +6,6 @@ PageBase.button.save=Save
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
 WorkItemsPanel.name=Name
-pageBase.midPointVersion=Verzia\: ${pom.version}, revízia\: ${buildNumber}
+pageBase.midPointVersion=Verzia\: ${pom.version}, popis\: ${describe}
 pageBase.rightsReserved=&copy;2013 Evolveum. Všetky práva vyhradené.
 pageBase.unknownBuildNumber=neznáme
