--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/help/PageSystem_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/help/PageSystem_sk_SK.utf8.properties
@@ -1,9 +1,9 @@
 #Thu May 30 10:05:25 CEST 2013
 page.title=About system
 pageSystem.button.testRepository=Repository self test
-pageSystem.midPointRevision=${buildNumber}
-pageSystem.midPointRevisionTitle=Svn revision
-pageSystem.midPointSvn=midPoint SVN
+pageSystem.midPointRevision=${describe}
+pageSystem.midPointRevisionTitle=Git describe
+pageSystem.midPointSvn=midPoint Git
 pageSystem.midPointVersion=${pom.version}
 pageSystem.midPointVersionTitle=Version
 pageSystem.midPointWiki=midPoint wiki
@@ -15,7 +15,7 @@ pageSystem.repoDiag.implementationDescription=Implementation description
 pageSystem.repoDiag.implementationShortName=Implementation name
 pageSystem.repoDiag.isEmbedded=Is embedded
 pageSystem.repoDiag.repositoryUrl=Repository URL
-pageSystem.svnLink=Svn link
+pageSystem.svnLink=Git link
 pageSystem.title.basic=Basic system properties
 pageSystem.title.repository=Repository
 pageSystem.title.repository.additional=Additional details
