--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/help/PageSystem.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/help/PageSystem.properties
@@ -16,13 +16,13 @@
 
 page.title=About system
 pageSystem.midPointVersionTitle=Version
-pageSystem.midPointRevisionTitle=Svn revision
-pageSystem.svnLink=Svn link
-pageSystem.midPointSvn=midPoint SVN
+pageSystem.midPointRevisionTitle=Git describe
+pageSystem.svnLink=Git link
+pageSystem.midPointSvn=midPoint Git
 pageSystem.wikiLink=Wiki link
 pageSystem.midPointWiki=midPoint wiki
 pageSystem.midPointVersion=${pom.version}
-pageSystem.midPointRevision=${buildNumber}
+pageSystem.midPointRevision=${describe}
 pageSystem.unknownBuildNumber=unknown
 pageSystem.title.basic=Basic system properties
 pageSystem.title.repository=Repository
