--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -589,20 +589,21 @@
                         </executions>
                     </plugin>
                     <plugin>
-                        <groupId>org.codehaus.mojo</groupId>
-                        <artifactId>buildnumber-maven-plugin</artifactId>
+                        <groupId>com.lukegb.mojo</groupId>
+                        <artifactId>gitdescribe-maven-plugin</artifactId>
+                        <version>1.3</version>
                         <executions>
                             <execution>
-                                <phase>validate</phase>
                                 <goals>
-                                    <goal>create</goal>
+                                    <goal>gitdescribe</goal>
                                 </goals>
+                                <id>git-describe</id>
+                                <phase>initialize</phase>
+                                <configuration>
+                                    <outputPrefix></outputPrefix>
+                                </configuration>
                             </execution>
                         </executions>
-                        <configuration>
-                            <doCheck>false</doCheck>
-                            <doUpdate>false</doUpdate>
-                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
@@ -611,7 +612,7 @@
                             <archive>
                                 <manifestEntries>
                                     <Version-Number>${project.version}</Version-Number>
-                                    <SCM-Revision>${buildNumber}</SCM-Revision>
+                                    <SCM-Revision>${describe}</SCM-Revision>
                                     <Organization>Evolveum</Organization>
                                     <Organization-URL>http://www.evolveum.com</Organization-URL>
                                     <Bugtracking-System>http://jira.evolveum.com</Bugtracking-System>
@@ -628,7 +629,7 @@
                             <archive>
                                 <manifestEntries>
                                     <Version-Number>${project.version}</Version-Number>
-                                    <SCM-Revision>${buildNumber}</SCM-Revision>
+                                    <SCM-Revision>${describe}</SCM-Revision>
                                     <Organization>Evolveum</Organization>
                                     <Organization-URL>http://www.evolveum.com</Organization-URL>
                                     <Bugtracking-System>http://jira.evolveum.com</Bugtracking-System>
