--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/help/PageSystem_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/help/PageSystem_en_US.utf8.properties
@@ -17,9 +17,9 @@
 #Sat Mar 16 14:26:19 CET 2013
 page.title=About system
 pageSystem.button.testRepository=Repository self test
-pageSystem.midPointRevision=${buildNumber}
-pageSystem.midPointRevisionTitle=Svn revision
-pageSystem.midPointSvn=midPoint SVN
+pageSystem.midPointRevision=${describe}
+pageSystem.midPointRevisionTitle=Git describe
+pageSystem.midPointSvn=midPoint Git
 pageSystem.midPointVersion=${pom.version}
 pageSystem.midPointVersionTitle=Version
 pageSystem.midPointWiki=midPoint wiki
@@ -31,7 +31,7 @@ pageSystem.repoDiag.implementationDescription=Implementation description
 pageSystem.repoDiag.implementationShortName=Implementation name
 pageSystem.repoDiag.isEmbedded=Is embedded
 pageSystem.repoDiag.repositoryUrl=Repository URL
-pageSystem.svnLink=Svn link
+pageSystem.svnLink=Git link
 pageSystem.title.basic=Basic system properties
 pageSystem.title.repository=Repository
 pageSystem.title.repository.additional=Additional details
