--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 pageBase.rightsReserved=&copy;2013 Evolveum. All Rights Reserved.
-pageBase.midPointVersion=Version: ${pom.version}, revision: ${buildNumber}
+pageBase.midPointVersion=Version: ${pom.version}, describe: ${describe}
 pageBase.unknownBuildNumber=unknown
 
 #most common used button names, used also in PageBase subclasses
