Improving debug pages export.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageDebugList.properties
@@ -26,6 +26,7 @@ pageDebugList.resourceType=Resource type
 pageDebugList.zipCheck=Zip
 pageDebugList.button.clear=Clear
 pageDebugList.button.search=Search
+pageDebugList.button.export=Export
 pageDebugList.button.exportAll=Export all
 pageDebugList.button.label.export=Export:
 pageDebugList.message.queryException=Couldn't create query for name substring, reason: {0}
