attempt to fix MID-1580

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AccountOperationButtons.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/AccountOperationButtons.properties
@@ -14,5 +14,7 @@
 # limitations under the License.
 #
 
-prismOperationButtonPanel.unlink=Unlink Account
-prismOperationButtonPanel.delete=Delete Account
+prismOperationButtonPanel.unlink=Unlink account
+prismOperationButtonPanel.undoUnlink=Undo unlink account
+prismOperationButtonPanel.delete=Delete account
+prismOperationButtonPanel.undoDelete=Undo delete account
