--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageAdminUsers_sk_SK.utf8.properties
@@ -3,4 +3,4 @@ pageAdminUsers.bulkActions=Bulk actions
 pageAdminUsers.editUser=Editovať používateľa
 pageAdminUsers.listUsers=Zoznam používateľov
 pageAdminUsers.newUser=Nový používateľ
-pageAdminUsers.orgStruct=Organization structure
+pageAdminUsers.orgStruct=Organizačná štruktúra
