Basic functionality of general change processor working. (Prepare and start process, issue work item, complete it, finish process.)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wf/processes/itemApproval/ItemApprovalPanel.properties
@@ -16,6 +16,7 @@
 ItemApprovalPanel.itemToBeApproved=Item to be approved
 ItemApprovalPanel.itemThatWasApproved=Item that was considered (and was APPROVED)
 ItemApprovalPanel.itemThatWasRejected=Item that was considered (and was REJECTED)
+ItemApprovalPanel.itemThatWasCompleted=Item that was completed
 
 ItemApprovalPanel.approvalSchema=Approval schema
 ItemApprovalPanel.decisionsDoneWhenFinishedIs_false=Decisions done so far
