--- a/gui/admin-gui-en-US/pom.xml
+++ b/gui/admin-gui-en-US/pom.xml
@@ -21,11 +21,11 @@
     <groupId>com.evolveum.midpoint.gui</groupId>
     <artifactId>admin-gui-en-US</artifactId>
     <packaging>jar</packaging>
-    <version>2.2-SNAPSHOT</version>
+    <version>2.2</version>
     <parent>
         <artifactId>gui</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
     </parent>
     <build>
         <resources>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
