--- a/model/model-api/pom.xml
+++ b/model/model-api/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>model</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2-SNAPSHOT</version>
+		<version>2.2</version>
 	</parent>
 	<organization>
 		<name>Evolveum</name>
@@ -50,12 +50,12 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
         <dependency>
@@ -65,7 +65,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>audit-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 	</dependencies>
 </project>
