--- a/model/model-client/pom.xml
+++ b/model/model-client/pom.xml
@@ -24,7 +24,7 @@
     <parent>
         <artifactId>model</artifactId>
         <groupId>com.evolveum.midpoint</groupId>
-        <version>2.2-SNAPSHOT</version>
+        <version>2.2</version>
     </parent>
     <dependencies>
     	<dependency>
@@ -55,7 +55,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
             <artifactId>util</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>         -->
         <!--  Testing dependecies  -->
         <dependency>
@@ -66,7 +66,7 @@
         <dependency>
             <groupId>com.evolveum.midpoint.tools</groupId>
             <artifactId>test-ng</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -96,13 +96,13 @@
                                 <artifactItem>
                                     <groupId>com.evolveum.midpoint.infra</groupId>
                                     <artifactId>prism</artifactId>
-                                    <version>2.2-SNAPSHOT</version>
+                                    <version>2.2</version>
                                     <type>jar</type>
                                 </artifactItem>
                                 <artifactItem>
                                     <groupId>com.evolveum.midpoint.infra</groupId>
                                     <artifactId>schema</artifactId>
-                                    <version>2.2-SNAPSHOT</version>
+                                    <version>2.2</version>
                                     <type>jar</type>
                                 </artifactItem>
                             </artifactItems>
@@ -210,7 +210,7 @@
                     <dependency>
                         <groupId>com.evolveum.midpoint.tools</groupId>
                         <artifactId>xjc-plugin</artifactId>
-                        <version>2.2-SNAPSHOT</version>
+                        <version>2.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
