--- a/model/model-test/pom.xml
+++ b/model/model-test/pom.xml
@@ -24,7 +24,7 @@
 	<parent>
 		<artifactId>model</artifactId>
 		<groupId>com.evolveum.midpoint</groupId>
-		<version>2.2-SNAPSHOT</version>
+		<version>2.2</version>
 	</parent>
 	<organization>
 		<name>Evolveum</name>
@@ -50,62 +50,62 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>test-util</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.infra</groupId>
 			<artifactId>util</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.model</groupId>
 			<artifactId>model-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
         <dependency>
             <groupId>com.evolveum.midpoint.model</groupId>
             <artifactId>notifications</artifactId>
-            <version>2.2-SNAPSHOT</version>
+            <version>2.2</version>
         </dependency>
         <dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-cache</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.provisioning</groupId>
 			<artifactId>provisioning-api</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 	     	<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-connector</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-connector-fake</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.icf</groupId>
 			<artifactId>dummy-resource</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-test-util</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.testng</groupId>
@@ -120,25 +120,25 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.provisioning</groupId>
 			<artifactId>provisioning-impl</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>task-quartz-impl</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>audit-impl</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-sql-impl</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -159,7 +159,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.tools</groupId>
 			<artifactId>test-ng</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -170,7 +170,7 @@
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>system-init</artifactId>
-			<version>2.2-SNAPSHOT</version>
+			<version>2.2</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
