Small fix for GUI Conf->Logging filters table. Added missing properties.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
@@ -60,6 +60,8 @@ pageLogging.filter.REPOSITORY=Repository filter
 pageLogging.filter.GUI=Web filter
 pageLogging.filter.TASKMANAGER=Task manager filter
 pageLogging.filter.RESOURCEOBJECTCHANGELISTENER=Resource object change listener filter
+pageLogging.filter.WORKFLOWS=Workflow filter
+pageLogging.filter.NOTIFICATIONS=Notification filter
 
 pageLogging.logger.ALL=All
 pageLogging.logger.MODEL=Model logger
