--- a/infra/schema/pom.xml
+++ b/infra/schema/pom.xml
@@ -90,10 +90,10 @@
             <groupId>org.apache.cxf</groupId>
             <artifactId>cxf-rt-management</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-common-utilities</artifactId>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.apache.cxf</groupId> -->
+<!--             <artifactId>cxf-common-utilities</artifactId> -->
+<!--         </dependency> -->
         <dependency>
             <groupId>xml-resolver</groupId>
             <artifactId>xml-resolver</artifactId>
