GUI for profiling + some minor improvements.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_en_US.utf8.properties
@@ -60,3 +60,16 @@ pageLogging.rootAppender=Root appender\:
 pageLogging.rootLevel=Root logger\:
 pageLogging.subsystem.appender=Appender
 pageLogging.subsystem.level=Level
+
+pageLogging.profiling=Profiling
+pageLogging.requestFilter=Request filter:
+pageLogging.performanceStatistics=Performance statistics:
+pageLogging.subsystems=Subsystems:
+pageLogging.dumpInterval=Dump interval:
+pageLogging.subsystem.model=Model
+pageLogging.subsystem.repository=Repository
+pageLogging.subsystem.provisioning=Provisioning
+pageLogging.subsystem.ucf=Ucf
+pageLogging.subsystem.resourceObjectChangeListener=Resource object change listener
+pageLogging.subsystem..taskManager=Task manager
+pageLogging.subsystem.workflow=Workflow
