--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/PageLogging_sk_SK.utf8.properties
@@ -60,3 +60,16 @@ pageLogging.rootAppender=Root appender\:
 pageLogging.rootLevel=Root logger\:
 pageLogging.subsystem.appender=Appender
 pageLogging.subsystem.level=Level
+
+pageLogging.profiling=Profilovanie
+pageLogging.requestFilter=Filter webových requestov:
+pageLogging.performanceStatistics=Štatistiky výkonnosti systému:
+pageLogging.subsystems=Podsystémy:
+pageLogging.dumpInterval=Interval vypisovania do logov:
+pageLogging.subsystem.model=Model
+pageLogging.subsystem.repository=Repozitár
+pageLogging.subsystem.provisioning=Provisioning
+pageLogging.subsystem.ucf=Ucf
+pageLogging.subsystem.resourceObjectChangeListener=Monitor zmien v pripojených systémoch
+pageLogging.subsystem..taskManager=Manažér úloh
+pageLogging.subsystem.workflow=Pracovné položky
