--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageLogging.properties
@@ -81,3 +81,16 @@ message.emptyString=Input panel must not be empty
 
 filter.emptyFilter=Filter must not be empty
 filter.duplicate=Filter with name '{0}' is already defined
+
+pageLogging.profiling=Profiling
+pageLogging.requestFilter=Request filter:
+pageLogging.performanceStatistics=Performance statistics:
+pageLogging.subsystems=Subsystems:
+pageLogging.dumpInterval=Dump interval:
+pageLogging.subsystem.model=Model
+pageLogging.subsystem.repository=Repository
+pageLogging.subsystem.provisioning=Provisioning
+pageLogging.subsystem.ucf=Ucf
+pageLogging.subsystem.resourceObjectChangeListener=Resource object change listener
+pageLogging.subsystem..taskManager=Task manager
+pageLogging.subsystem.workflow=Workflow
