ace editor, easy-pie-chart 2.0.2

--- a/gui/admin-gui/src/main/webapp/WEB-INF/wro.properties
+++ b/gui/admin-gui/src/main/webapp/WEB-INF/wro.properties
@@ -20,4 +20,4 @@ postProcessors=lessCss
 
 # disabling cache for developing purposes only, more configuration options
 # http://code.google.com/p/wro4j/wiki/ConfigurationOptions
-disableCache=false
+disableCache=true
