top menu bar implementation, almost done.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBootstrap.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBootstrap.properties
@@ -6,3 +6,28 @@ PageBootstrap.menu.top.users.new=New user
 PageBootstrap.menu.top.users.org=Org. structure
 PageBootstrap.menu.top.users.org.tree=Organization tree
 PageBootstrap.menu.top.users.org.new=New organization
+PageBootstrap.menu.top.roles=Roles
+PageBootstrap.menu.top.roles.list=List roles
+PageBootstrap.menu.top.roles.new=New role
+PageBootstrap.menu.top.resources=Resources
+PageBootstrap.menu.top.resources.list=List resources
+PageBootstrap.menu.top.resources.new=New Resource
+PageBootstrap.menu.top.workItems=Work items
+PageBootstrap.menu.top.workItems.list=List work items
+PageBootstrap.menu.top.serverTasks=Server tasks
+PageBootstrap.menu.top.serverTasks.list=List tasks
+PageBootstrap.menu.top.serverTasks.new=New task
+PageBootstrap.menu.top.reports=Reports
+PageBootstrap.menu.top.reports.list=List reports
+PageBootstrap.menu.top.reports.created=Created reports
+PageBootstrap.menu.top.configuration=Configuration
+PageBootstrap.menu.top.configuration.bulkActions=Bulk actions
+PageBootstrap.menu.top.configuration.importObject=Import object
+PageBootstrap.menu.top.configuration.repositoryObjects=Repository objects
+PageBootstrap.menu.top.configuration.configuration=Configuration
+PageBootstrap.menu.top.configuration.basic=Basic
+PageBootstrap.menu.top.configuration.security=Security
+PageBootstrap.menu.top.configuration.development=Development
+PageBootstrap.menu.top.configuration.shadowsDetails=Shadows details
+PageBootstrap.menu.top.configuration.expressionEvaluator=Expression evaluator
+PageBootstrap.menu.top.configuration.about=About
