updating base page for all midpoint pages, now it looks real bad :)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/PageBase.properties
@@ -26,3 +26,38 @@ PageBase.button.delete=Delete
 WorkItemsPanel.name=Name
 WorkItemsPanel.assigned=Assigned to
 WorkItemsPanel.created=Created
+
+PageBase.menu.top.home=Home
+PageBase.menu.top.users=Users
+PageBase.menu.top.users.list=List users
+PageBase.menu.top.users.find=Find users
+PageBase.menu.top.users.new=New user
+PageBase.menu.top.users.org=Org. structure
+PageBase.menu.top.users.org.tree=Organization tree
+PageBase.menu.top.users.org.new=New organization
+PageBase.menu.top.roles=Roles
+PageBase.menu.top.roles.list=List roles
+PageBase.menu.top.roles.new=New role
+PageBase.menu.top.resources=Resources
+PageBase.menu.top.resources.list=List resources
+PageBase.menu.top.resources.new=New Resource
+PageBase.menu.top.workItems=Work items
+PageBase.menu.top.workItems.list=List work items
+PageBase.menu.top.serverTasks=Server tasks
+PageBase.menu.top.serverTasks.list=List tasks
+PageBase.menu.top.serverTasks.new=New task
+PageBase.menu.top.reports=Reports
+PageBase.menu.top.reports.list=List reports
+PageBase.menu.top.reports.created=Created reports
+PageBase.menu.top.configuration=Configuration
+PageBase.menu.top.configuration.bulkActions=Bulk actions
+PageBase.menu.top.configuration.importObject=Import object
+PageBase.menu.top.configuration.repositoryObjects=Repository objects
+PageBase.menu.top.configuration.configuration=Configuration
+PageBase.menu.top.configuration.basic=Basic
+PageBase.menu.top.configuration.security=Security
+PageBase.menu.top.configuration.development=Development
+PageBase.menu.top.configuration.shadowsDetails=Shadows details
+PageBase.menu.top.configuration.expressionEvaluator=Expression evaluator
+PageBase.menu.top.configuration.about=About
+
