--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/login/PageLogin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/login/PageLogin.properties
@@ -15,8 +15,6 @@
 #
 
 page.title=Login
-pageLogin.submit=Login
-pageLogin.userLabel=User
-pageLogin.passwordLabel=Password
-pageLogin.title=Login form
-pageLogin.description=Please fill in the the following details
+PageLogin.signIn=Sign in
+PageLogin.username=Username
+PageLogin.password=Password
