--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/PageAdmin.properties
@@ -72,3 +72,37 @@ pageTasks.category.UserRecomputation=User recomputation
 pageTasks.category.Workflow=Workflow
 pageTasks.category.Cleanup=Cleanup
 pageTasks.category.System=System
+
+PageAdmin.menu.top.home=Home
+PageAdmin.menu.top.users=Users
+PageAdmin.menu.top.users.list=List users
+PageAdmin.menu.top.users.find=Find users
+PageAdmin.menu.top.users.new=New user
+PageAdmin.menu.top.users.org=Org. structure
+PageAdmin.menu.top.users.org.tree=Organization tree
+PageAdmin.menu.top.users.org.new=New organization
+PageAdmin.menu.top.roles=Roles
+PageAdmin.menu.top.roles.list=List roles
+PageAdmin.menu.top.roles.new=New role
+PageAdmin.menu.top.resources=Resources
+PageAdmin.menu.top.resources.list=List resources
+PageAdmin.menu.top.resources.new=New Resource
+PageAdmin.menu.top.workItems=Work items
+PageAdmin.menu.top.workItems.list=List work items
+PageAdmin.menu.top.serverTasks=Server tasks
+PageAdmin.menu.top.serverTasks.list=List tasks
+PageAdmin.menu.top.serverTasks.new=New task
+PageAdmin.menu.top.reports=Reports
+PageAdmin.menu.top.reports.list=List reports
+PageAdmin.menu.top.reports.created=Created reports
+PageAdmin.menu.top.configuration=Configuration
+PageAdmin.menu.top.configuration.bulkActions=Bulk actions
+PageAdmin.menu.top.configuration.importObject=Import object
+PageAdmin.menu.top.configuration.repositoryObjects=Repository objects
+PageAdmin.menu.top.configuration.configuration=Configuration
+PageAdmin.menu.top.configuration.basic=Basic
+PageAdmin.menu.top.configuration.security=Security
+PageAdmin.menu.top.configuration.development=Development
+PageAdmin.menu.top.configuration.shadowsDetails=Shadows details
+PageAdmin.menu.top.configuration.expressionEvaluator=Expression evaluator
+PageAdmin.menu.top.configuration.about=About
