--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
@@ -14,6 +14,7 @@
 # limitations under the License.
 #
 page.title=Welcome
+PageDashboard.subtitle=to midPoint Dashboard
 PageDashboard.accounts=My accounts
 PageDashboard.personalInfo=Personal info
 PageDashboard.workItems=My work items
