dashboard page improved, not finished yet.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/component/PersonalInfoPanel.properties
@@ -14,10 +14,13 @@
 # limitations under the License.
 #
 
-PersonalInfoPanel.lastLoginDate=Last login date
-PersonalInfoPanel.lastLoginFrom=Last login from
-PersonalInfoPanel.lastFailDate=Last unsuccessful login date
-PersonalInfoPanel.lastFailFrom=Last unsuccessful login from
+PersonalInfoPanel.lastLogin=Last login
+PersonalInfoPanel.lastLogin.date=Date
+PersonalInfoPanel.lastLogin.from=From
+PersonalInfoPanel.lastFail=Last unsuccessful login
+PersonalInfoPanel.lastFail.date=Date
+PersonalInfoPanel.lastFail.from=From
 PersonalInfoPanel.passwordExp=Account expiration date
 PersonalInfoPanel.never=Never
-PersonalInfoPanel.undefined=Undefined
+PersonalInfoPanel.undefined=Not defined
+PersonalInfoPanel.other=Other
