focus object type localization (cherry picked from commit 3ee4703)

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -42,6 +42,7 @@ schema.objectTypes.objectTemplate=Object template
 schema.objectTypes.user=User
 schema.objectTypes.org=Organization
 schema.objectTypes.shadow=Shadow
+schema.objectTypes.focus=Focus
 
 SynchronizationPolicyDecision.ADD=Add
 SynchronizationPolicyDecision.DELETE=Delete
