--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
@@ -13,8 +13,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=Welcome
-PageDashboard.subtitle=to midPoint Dashboard
+page.title=Dashboard
+PageDashboard.subtitle=welcome to midPoint
 PageDashboard.accounts=My accounts
 PageDashboard.personalInfo=Personal info
 PageDashboard.workItems=My work items
