login page done.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_en_US.utf8.properties
@@ -16,8 +16,6 @@
 
 #Wed Jun 06 18:33:31 CEST 2012
 page.title=Login
-pageLogin.description=Please fill in the the following details
-pageLogin.passwordLabel=Password
-pageLogin.submit=Login
-pageLogin.title=Login form
-pageLogin.userLabel=User
+PageLogin.signIn=Sign in
+PageLogin.username=Username
+PageLogin.password=Password
