--- a/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_sk_SK.utf8.properties
+++ b/gui/admin-gui-sk-SK/src/main/resources/com/evolveum/midpoint/web/page/login/PageLogin_sk_SK.utf8.properties
@@ -16,8 +16,6 @@
 
 #Wed Jun 06 18:36:11 CEST 2012
 page.title=Prihlásenie
-pageLogin.description=Prosím vyplňte nasledujúce polia
-pageLogin.passwordLabel=Heslo
-pageLogin.submit=Prihlásiť
-pageLogin.title=Prihlasovací formulár
-pageLogin.userLabel=Meno
+PageLogin.signIn=Prihlásiť
+PageLogin.username=Meno
+PageLogin.password=Heslo
