--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LoginPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/login/LoginPanel.properties
@@ -13,5 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-loginPanel.loggedInAs=Logged in as:
-loginPanel.about=About
+LoginPanel.logout=Log out
+LoginPanel.editProfile=Edit profile
+LoginPanel.resetPasswords=Reset passwords
