better name for login panel

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/right/UserMenuPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/menu/top2/right/UserMenuPanel.properties
@@ -13,6 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-LoginPanel.logout=Log out
-LoginPanel.editProfile=Edit profile
-LoginPanel.resetPasswords=Reset passwords
+UserMenuPanel.logout=Log out
+UserMenuPanel.editProfile=Edit profile
+UserMenuPanel.resetPasswords=Reset passwords
