--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -21,6 +21,7 @@ PageAbout.midPointRevisionTitle=Git describe
 PageAbout.midPointVersion=${pom.version}
 PageAbout.midPointRevision=${describe}
 PageAbout.unknownBuildNumber=unknown
+PageAbout.title.basic=Basic
 PageAbout.title.systemProperties=System properties
 PageAbout.title.repository=Repository
 PageAbout.title.repository.additional=Additional details
@@ -33,3 +34,4 @@ PageAbout.repoDiag.repositoryUrl=Repository URL
 PageAbout.repoDiag.additionalDetails.name=Name
 PageAbout.repoDiag.additionalDetails.value=Value
 PageAbout.button.testRepository=Repository self test
+PageAbout.allRightsReserved=&copy;2013 Evolveum. All Rights Reserved.
