dashboard styles improved

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageAbout.properties
@@ -15,7 +15,7 @@
 #
 
 page.title=About
-PageAbout.subTitle=midPoint
+page.subTitle=midPoint
 PageAbout.midPointVersionTitle=Version
 PageAbout.midPointRevisionTitle=Git describe
 PageAbout.midPointVersion=${pom.version}
