--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
@@ -14,7 +14,7 @@
 # limitations under the License.
 #
 page.title=Dashboard
-PageDashboard.subtitle=welcome to midPoint
+page.subTitle=welcome to midPoint
 PageDashboard.accounts=My accounts
 PageDashboard.personalInfo=Personal info
 PageDashboard.workItems=My work items
