--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUsers.properties
@@ -14,7 +14,8 @@
 # limitations under the License.
 #
 
-page.title=Users in repository
+page.title=Users
+page.subTitle=in midPoint
 pageUsers.type=Type
 pageUsers.name=Name
 pageUsers.givenName=Given name
