system status widget, prepared body

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/home/PageDashboard.properties
@@ -19,3 +19,4 @@ PageDashboard.accounts=My accounts
 PageDashboard.personalInfo=Personal info
 PageDashboard.workItems=My work items
 PageDashboard.assignments=My Assignments
+PageDashboard.systemInfo=System status
