table panel refactoring, not finished yet.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/users/PageUsers_en_US.utf8.properties
@@ -1,5 +1,6 @@
 #Tue Jul 16 11:28:12 CEST 2013
-page.title=Users in repository
+page.title=Users
+page.subTitle=in midPoint
 pageUsers.accounts=Accounts
 pageUsers.button.clearButton=Clear
 pageUsers.button.delete=Delete
