--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel2.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel2.properties
@@ -13,5 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-navigatorPanel.label=Displaying {0,number,integer} to {1,number,integer} of {2,number,integer} matching result.
-navigatorPanel.noFound=No matching result found.
+NavigatorPanel2.previous=Previous
+NavigatorPanel2.dots=...
+NavigatorPanel2.next=Next
+NavigatorPanel2.first=1
