table panel count toolbar and css fixes, still not finished yet

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/CountToolbar.properties
@@ -13,7 +13,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-NavigatorPanel2.previous=Previous
-NavigatorPanel2.dots=...
-NavigatorPanel2.next=Next
-NavigatorPanel2.first=1
+CountToolbar.label=Displaying {0,number,integer} to {1,number,integer} of {2,number,integer} matching result.
+CountToolbar.noFound=No matching result found.
