--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/data/paging/NavigatorPanel.properties
@@ -13,5 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-TablePanel.label=Displaying {0,number,integer} to {1,number,integer} of {2,number,integer} matching result.
-TablePanel.noFound=No matching result found.
+NavigatorPanel.previous=Previous
+NavigatorPanel.dots=...
+NavigatorPanel.next=Next
+NavigatorPanel.first=1
