MID-1618 - partial implementation, adding 'Import Account' button to Resources->Accounts

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts_en_US.utf8.properties
@@ -2,10 +2,12 @@
 page.title={0}
 pageContentAccounts.accounts=Accounts
 pageContentAccounts.button.changeOwner=Change owner
+pageContentAccounts.button.importAccount=Import account
 pageContentAccounts.button.clearButton=Clear
 pageContentAccounts.button.removeOwner=Remove owner
 pageContentAccounts.button.searchButton=Search
 pageContentAccounts.identifiers=Identifiers
+pageContentAccounts.message.cantImportAccount=Can't import account, oid={0}
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
