--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/content/PageContentAccounts.properties
@@ -23,9 +23,11 @@ pageContentAccounts.identifiers=Identifiers
 pageContentAccounts.owner=Owner
 pageContentAccounts.button.clearButton=Clear
 pageContentAccounts.button.searchButton=Search
+pageContentAccounts.message.cantImportAccount=Can't import account, oid={0}
 pageContentAccounts.message.cantShowUserDetails=Can't show details of user {0} ({1}).
 pageContentAccounts.message.cantShowAccountDetails=Can't show details for account {0} ({1}).
 pageContentAccounts.message.noAccountSelected=No accounts has been selected.
 pageContentAccounts.button.changeOwner=Change owner
+pageContentAccounts.button.importAccount=Import Account
 pageContentAccounts.button.removeOwner=Remove owner
 pageContentAccounts.message.resourceOidNotDefined=Resource oid is not defined in url.
