internal accounts updated.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/internal/PageAccounts.properties
@@ -14,7 +14,22 @@
 # limitations under the License.
 #
 
-page.title=Internals :: accounts
+page.title=Shadow
+page.subTitle=synchronization details
+PageAccounts.resource=Resource
+PageAccounts.button.load=Load
+PageAccounts.button.export=Export
+PageAccounts.summary=Summary
+PageAccounts.state=State
+PageAccounts.count=Count
+PageAccounts.deleted=Deleted
+PageAccounts.linked=Linked
+PageAccounts.unlinked=Unlinked
+PageAccounts.disputed=Disputed
+PageAccounts.unmatched=Unmatched
+PageAccounts.total=Total
+PageAccounts.nothing=Nothing
+PageAccounts.shadows=Shadows
 PageAccounts.accounts.oid=Oid
 PageAccounts.accounts.name=Name
 PageAccounts.accounts.synchronizationSituation=Situation
