object import, not finished yet.

--- a/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/ImportOptionsPanel_en_US.utf8.properties
+++ b/gui/admin-gui-en-US/src/main/resources/com/evolveum/midpoint/web/page/admin/configuration/ImportOptionsPanel_en_US.utf8.properties
@@ -5,7 +5,7 @@ importOptionsPanel.keepOid=Keep OID
 importOptionsPanel.overwriteExistingObject=Overwrite existing object
 importOptionsPanel.protectedByEncryption=Protected by encryption
 importOptionsPanel.referentialIntegrity=Referential integrity
-importOptionsPanel.stopAfter=Stop after
+importOptionsPanel.stopAfter=Stop after errors exceed
 importOptionsPanel.summarizeErrors=Summarize errors
 importOptionsPanel.summarizeSuccesses=Summarize successes
 importOptionsPanel.validateDynamicSchema=Validate dynamic schema
