--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/ImportOptionsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/ImportOptionsPanel.properties
@@ -22,5 +22,6 @@ importOptionsPanel.summarizeErrors=Summarize errors
 importOptionsPanel.summarizeSuccesses=Summarize successes
 importOptionsPanel.validateDynamicSchema=Validate dynamic schema
 importOptionsPanel.validateStaticSchema=Validate static schema
-importOptionsPanel.stopAfter=Stop after
-importOptionsPanel.errors=errors
+importOptionsPanel.stopAfter=Stop after errors exceed
+ImportOptionsPanel.errorCount=Error count
+ImportOptionsPanel.options=Options
