--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageImportObject.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/PageImportObject.properties
@@ -13,11 +13,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-page.title=Import object
-pageImportObject.chooseImportType=Choose import type:
-pageImportObject.importFromFile=Import from file
-pageImportObject.useEmbeddedEditor=Use embedded editor
+page.title=Import objects
+page.subTitle=to midPoint
+PageImportObject.getObjectsFrom=Get objects from
+PageImportObject.file=File
+PageImportObject.embeddedEditor=Embedded editor
 pageImportObject.chooseFile=Choose file:
-pageImportObject.button.import=Import object
+PageImportObject.button.import=Import object
 pageImportObject.message.nullFile=Uploaded file is null.
 pageImportObject.message.emptyXml=Can't save empty xml.
